; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Iter.c_Zip_Del.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Iter.c_Zip_Del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Zip = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Zip*)* @Zip_Del to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Zip_Del(%struct.Zip* %0) #0 {
  %2 = alloca %struct.Zip*, align 8
  %3 = alloca %struct.Zip*, align 8
  store %struct.Zip* %0, %struct.Zip** %2, align 8
  %4 = load %struct.Zip*, %struct.Zip** %2, align 8
  store %struct.Zip* %4, %struct.Zip** %3, align 8
  %5 = load %struct.Zip*, %struct.Zip** %3, align 8
  %6 = getelementptr inbounds %struct.Zip, %struct.Zip* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @del(i32 %7)
  %9 = load %struct.Zip*, %struct.Zip** %3, align 8
  %10 = getelementptr inbounds %struct.Zip, %struct.Zip* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @del(i32 %11)
  ret void
}

declare dso_local i32 @del(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
